syntax = "proto3";

package rpc;

import "google/protobuf/any.proto";

option java_package = "com.github.paopaoyue.mesh.rpc.proto";
option java_outer_classname = "Protocol";

message Packet {
  PacketHeader header = 1;
  TraceInfo trace_info = 2;
  google.protobuf.Any body = 3;
}

message PacketHeader {
  fixed32 length = 1;
  fixed32 flag = 2;
  int64 requestId = 5;
  string service = 10;
  string handler = 11;
}

message TraceInfo {
  int64 traceId = 1;
  int64 startTime = 11;
  string upper_service = 12;
  string upper_handler = 13;
  string upper_device = 21;
  string upper_host = 22;
  int32 upper_port = 23;
}